gcc/testsuite/gdc.test/compilable/imports/test19657e.d
import test19657f;
class Bar { }
