gcc/testsuite/gdc.test/fail_compilation/imports/import21508.d
module import21508;
private class import21508 {}
